# xdpsock

./: ARCHITECTURE.md  Cargo.toml  README.md  cleanup_veth.sh  run_all_tests.sh
examples/: dev2_to_dev1.rs  dev_to_dev.rs  hello_xdp.rs  synacker.rs
examples/util/: mod.rs
src/: iface.rs  lib.rs  util.rs  xsk.rs
src/socket/: config.rs  fd.rs  mod.rs  poll.rs  socket.rs
src/umem/: config.rs  mmap.rs  mod.rs  umem.rs
src/xsk/: mod.rs  rx.rs  tx.rs  xsk.rs
tests/: comp_queue_tests.rs  fill_queue_tests.rs  rx_queue_tests.rs  send_recv_tests.rs  tx_queue_tests.rs
tests/setup/: mod.rs  veth_setup.rs
