[package]
name = "xdpsock"
version = "0.1.0"
authors = ["Collins Huff collinsrhuff@gmail.com", "Douglas Gray <dbgray01@gmail.com>"]
edition = "2018"
description = "Rust bindings for Linux AF_XDP sockets"
license = "MIT"
repository = "https://github.com/seeyarh/xdpsock"
readme = "README.md"
keywords = ["AF_XDP", "XSK", "eBPF", "XDP"]
categories = ["os::unix-apis", "external-ffi-bindings"]

[dependencies]
bitflags = "1.2.1"
libbpf-sys = "0.3.0-1"
libc = "0.2"
log = "0.4"
errno = "0.2.7"
crossbeam-channel = "0.5.0"
etherparse = "0.9.0"


[dev-dependencies]
anyhow = "1.0.32"
clap = "3.0.0-beta.2"
ctrlc = "3.1.7"
futures = "0.3.5"
rand = "0.8.3"
rtnetlink = "0.3.0"
env_logger = "0.8.2"
serial_test = "0.5.1"
rusty-fork = "0.3.0"
veth-util-rs = {git = "https://github.com/seeyarh/veth-util-rs.git", branch = "main"}
byteorder = "1.4.3"


[profile.release]
debug = true
